--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "dynamic-doggo",
   "version": "1.0.0",
   "description": "Because who doesn't need a project boiler plate??",
-  "main": "index.js",
+  "main": "./electron/main.js",
   "scripts": {
     "build": "webpack --mode development -w",
-    "server": "nodemon ./server/server.js"
+    "server": "nodemon ./server/server.js",
+    "estart": "electron ."
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "babel-preset-minify": "^0.5.0",
     "css-loader": "^2.1.1",
     "dotenv": "^8.0.0",
+    "electron": "^6.0.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.19.0",
