--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ryanferrer/dynamic-doggo#readme",
   "dependencies": {
+    "electron": "^6.1.4",
     "express": "^4.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
@@ -32,7 +33,12 @@
     "babel-preset-minify": "^0.5.0",
     "css-loader": "^2.1.1",
     "dotenv": "^8.0.0",
-    "electron": "^6.0.3",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.19.0",
