--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/ryanferrer/dynamic-doggo#readme",
   "dependencies": {
-    "electron": "^6.1.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.0",
+    "googleapis": "^45.0.0",
+    "node-fetch": "^2.6.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
@@ -32,7 +35,6 @@
     "babel-loader": "^8.0.6",
     "babel-preset-minify": "^0.5.0",
     "css-loader": "^2.1.1",
-    "dotenv": "^8.0.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
