--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "webpack --mode development -w",
     "server": "nodemon ./server/server.js",
-    "estart": "electron ."
+    "produce": "webpack --mode production",
+    "estart": "electron .",
+    "automate": "sudo docker build -t doge-app . && sudo docker run --name doge-app -p 3030:8080 -d doge-app"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,6 @@
   },
   "homepage": "https://github.com/ryanferrer/dynamic-doggo#readme",
   "dependencies": {
-    "electron": "^6.1.4",
     "express": "^4.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
